--- a/To-Do-App/app/src/static/index.html
+++ b/To-Do-App/app/src/static/index.html
@@ -8,9 +8,10 @@
     <link rel="stylesheet" href="css/font-awesome/all.min.css" crossorigin="anonymous" />
     <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="css/styles.css" />
-    <title>Todo App latest!</title>
+    <title>Todo App!</title>
 </head>
 <body>
+    <h1>Develop</h1>
     <div id="root"></div>
     <script src="js/react.production.min.js"></script>
     <script src="js/react-dom.production.min.js"></script>
