--- a/To-Do-App/app/src/static/index.html
+++ b/To-Do-App/app/src/static/index.html
@@ -11,7 +11,7 @@
     <title>Todo App!</title>
 </head>
 <body>
-    <h1>Develop</h1>
+    <h1>version 1.0.0</h1>
     <div id="root"></div>
     <script src="js/react.production.min.js"></script>
     <script src="js/react-dom.production.min.js"></script>
